# TailBeacon

./: .gitignore  README.md  main.py  pyproject.toml  setup.sh  tailbeacon.service  tailscale-funnel.service
