[project]
name = "tailbeacon"
version = "0.1.0"
description = "A simple health check server to monitor if a machine is online and responsive."
authors = [{ name = "Juanes", email = "johannstephan239@me.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
]
